# LangChain-ChatGPT

./: .gitignore  01_start.ipynb  02_gpt_langchain_int.ipynb  03_memory_interactions.ipynb  04_embeddings.ipynb  05_document_retrievers.ipynb  06_agents_tools.ipynb  07_pinecone.ipynb  08_celery.ipynb  09_custom_histories.ipynb  10_streaming_text.ipynb  11_extending_langchain.ipynb  12_text_generation.ipynb  13_observability.ipynb
.ipynb_checkpoints/: 01_start-checkpoint.ipynb  02_gpt_langchain_int-checkpoint.ipynb  03_memory_interactions-checkpoint.ipynb  04_embeddings-checkpoint.ipynb  05_document_retrievers-checkpoint.ipynb  06_agents_tools-checkpoint.ipynb  07_pinecone-checkpoint.ipynb  08_celery-checkpoint.ipynb  09_custom_histories-checkpoint.ipynb
assets/: 05_scores.ipynb
projects/agents/: main.py  pyproject.toml
projects/agents/src/: _configs.py  _memory.py  _prompt.py  agent.py  configs.py
projects/agents/src/tools/: _args_schemas.py  configs.py  functions.py  tools.py
projects/agents/utils/: callbacks.py  get_configs.py
projects/agents/utils/callbacks/: __init__.py  _boxen.py  _configs.py  callbacks.py
projects/cli/: cli.py
projects/cli/src/: _chain.py  main_chain.py
projects/cli/utils/: _configs.py  _parser.py
projects/facts-chatbot/: main.py  pyproject.toml
projects/facts-chatbot/src/: chain.py
projects/facts-chatbot/src/db/: _make_docs.py  _retriever.py  db.py  make_docs.py
projects/pdf/: dump.rdb  pyproject.toml
projects/pdf-upload-server/: pyproject.toml
projects/tchat/: main.py
projects/tchat-practice/: main.py
(+25 files in other folders)
