[tool.poetry]
name = "agents"
version = "0.1.0"
description = "Agents project for the LangChain course"
authors = ["felipesveiga <felipesveiga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.0.352"
openai = "0.27.8"
python-dotenv = "1.0.0"
pyboxen = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
