[tool.poetry]
name = "pdf-upload-server"
version = "0.1.0"
description = ""
authors = ["felipesveiga <felipesveiga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.7.0"
click = "8.1.7"
flask = "3.0.0"
flask-cors = "4.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
werkzeug = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
